fix tables and sort shifts

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,12 +1,3 @@
-table {
-  border-collapse:collapse;
-}
-
-table,th, td {
-  padding: 4px;
-  border: 1px solid #999;
-}
-
 .time_selects select {
    background: transparent;
    width: 45px;
